estilização do link para as paginas

--- a/src/paginas/componentes/Card/estilos.css
+++ b/src/paginas/componentes/Card/estilos.css
@@ -1,4 +1,5 @@
 .card {
+  box-sizing: border-box;
   background-color: #1abc9c;
   padding: 8px;
   border-radius: 5px;
@@ -7,4 +8,12 @@
   width: 50%;
   margin: 0 auto;
   margin-bottom: 8px;
+}
+
+.link {
+  background-color: #FF9A16;
+  border-radius: 5px;
+  color: black;
+  padding: 5px;
+  margin-bottom: 10px;
 }
