--- a/src/paginas/componentes/CardProduto/estilos.css
+++ b/src/paginas/componentes/CardProduto/estilos.css
@@ -5,6 +5,13 @@
   border-style: solid;
   border-color: #FF9A16;
   width: 50%;
-  margin: 0 auto;
-  margin-bottom: 8px;
+  margin: 8px auto;
+}
+
+.link {
+  background-color: #FF9A16;
+  border-radius: 5px;
+  color: black;
+  padding: 5px;
+  margin-bottom: 18px;
 }
