--- a/src/paginas/componentes/CardServico/estilos.css
+++ b/src/paginas/componentes/CardServico/estilos.css
@@ -7,3 +7,11 @@
   width: 50%;
   margin: 10px auto;
 }
+
+.link {
+  background-color: #FF9A16;
+  border-radius: 5px;
+  color: black;
+  padding: 5px;
+  margin-bottom: 18px;
+}
